<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="200dip"
    android:orientation="vertical" >
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:text="@string/setLockPwd"/>
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/setLockPwdHint"/>
    
    <EditText android:id="@+id/first_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/setLockPwdConfirm"/>
    
    <EditText android:id="@+id/confirm_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <LinearLayout android:layout_width="300dip"
        android:layout_height="50dip"
        android:orientation="horizontal">
        
        <Button android:id="@+id/cancle_reg_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="取消"/>
        
        <Button android:id="@+id/confirm_reg_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确定"/>
        
        
    </LinearLayout>
    
</LinearLayout>
