<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fangdao1_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/fangdao_guide1_bg"
    android:orientation="vertical" >

    <!-- 手机防盗的引导页，第一页 -->
    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fangdao_guide1"
        android:layout_marginTop="60dip"/>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:orientation="vertical">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="13sp"
            android:text="@string/fangdao_guider1_1"/>
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="13sp"
            android:text="@string/fangdao_guider1_2"/>
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="13sp"
            android:text="@string/fangdao_guider1_3"/>
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="13sp"
            android:text="@string/fangdao_guider1_4"/>
        
        
    </LinearLayout>
    
    <!--
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dip"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/guide_point_yes"/>
        
       <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:src="@drawable/guide_point_no"/>
       
       <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:src="@drawable/guide_point_no"/>
       
       <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:src="@drawable/guide_point_no"/>
        
    </LinearLayout>
    -->
    
</LinearLayout>
